--- a/ReactNativeKakaoExample/package.json
+++ b/ReactNativeKakaoExample/package.json
@@ -4,11 +4,12 @@
 	"private": false,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"		
+		"test": "jest"
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.6",
-		"react-native": "0.43.4"
+		"react-native": "0.43.4",
+    "react-native-kakao": "file:../"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
