--- a/ReactNativeKakaoExample/package.json
+++ b/ReactNativeKakaoExample/package.json
@@ -1,20 +1,20 @@
 {
 	"name": "ReactNativeKakaoExample",
 	"version": "0.0.1",
-	"private": false,
+	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"test": "jest"
 	},
 	"dependencies": {
 		"react": "16.0.0-alpha.6",
-		"react-native": "0.43.4",
-    "react-native-kakao": "file:../"
+		"react-native": "0.44.0",
+		"react-native-kakao": "file:../"
 	},
 	"devDependencies": {
-		"babel-jest": "19.0.0",
+		"babel-jest": "20.0.0",
 		"babel-preset-react-native": "1.9.1",
-		"jest": "19.0.2",
+		"jest": "20.0.0",
 		"react-test-renderer": "16.0.0-alpha.6"
 	},
 	"jest": {
