--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,7 +19,15 @@ android {
   }
 }
 
+repositories {
+  mavenCentral()
+  maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
+}
+
 dependencies {
   compile fileTree(include: ['*.jar'], dir: 'libs')
   compile 'com.facebook.react:react-native:+'
+
+  // 카카오 로그인 sdk를 사용하기 위해 필요.
+  compile group: 'com.kakao.sdk', name: 'usermgmt', version: project.1.3.0
 }
