--- a/ReactNativeKakaoExample/android/app/build.gradle
+++ b/ReactNativeKakaoExample/android/app/build.gradle
@@ -84,7 +84,7 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         applicationId "com.reactnativekakaoexample"
@@ -126,6 +126,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-kakao')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
