--- a/ReactNativeKakaoExample/android/build.gradle
+++ b/ReactNativeKakaoExample/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:2.1.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +16,7 @@ allprojects {
     repositories {
         mavenLocal()
         jcenter()
+                maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
