--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-  compileSdkVersion 25
-  buildToolsVersion "25.0.1"
+  compileSdkVersion 23
+  buildToolsVersion "23.0.1"
 
   defaultConfig {
     minSdkVersion 16
-    targetSdkVersion 25
+    targetSdkVersion 22
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -25,9 +25,9 @@ repositories {
 }
 
 dependencies {
-  compile fileTree(include: ['*.jar'], dir: 'libs')
+  //compile fileTree(include: ['*.jar'], dir: 'libs')
   compile 'com.facebook.react:react-native:+'
 
   // 카카오 로그인 sdk를 사용하기 위해 필요.
-  compile group: 'com.kakao.sdk', name: 'usermgmt', version: project.1.3.0
+  compile group: 'com.kakao.sdk', name: 'usermgmt', version: '1.1.36'
 }
