--- a/ReactNativeKakaoExample/android/app/build.gradle
+++ b/ReactNativeKakaoExample/android/app/build.gradle
@@ -95,12 +95,12 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "com.reactnativekakaoexample"
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
         ndk {
@@ -137,7 +137,11 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-kakao')
+//    compile 'com.android.support:multidex:1.0.0'
+    compile (project(':react-native-kakao')) {
+      exclude module: 'support-v4'
+//        exclude module: 'support-v7'
+    }
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
