--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,15 @@
 apply plugin: 'com.android.library'
 
+def KAKAO_SDK_VERSION = "1.15.1"
+
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.1"
+  compileSdkVersion rootProject.ext.hasProperty('compileSdkVersion') ? rootProject.ext.compileSdkVersion : 23
+  buildToolsVersion rootProject.ext.hasProperty('buildToolsVersion') ? rootProject.ext.buildToolsVersion : "28.0.3"
 
   defaultConfig {
-    minSdkVersion 16
-    targetSdkVersion 23
+    minSdkVersion rootProject.ext.hasProperty('minSdkVersion') ? rootProject.ext.minSdkVersion : 16
+    targetSdkVersion rootProject.ext.hasProperty('targetSdkVersion') ? rootProject.ext.targetSdkVersion : 26
+
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -23,16 +26,8 @@ repositories {
   mavenCentral()
 }
 
-subprojects {
-  repositories {
-    mavenCentral()
-    maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
-  }
-}
-
 dependencies {
-  //compile fileTree(include: ['*.jar'], dir: 'libs')
-  compile 'com.facebook.react:react-native:+'
-  compile 'com.android.support:appcompat-v7:23.+'
-  compile group: 'com.kakao.sdk', name: 'usermgmt', version: '1.1.36'
+  implementation 'com.facebook.react:react-native:+'
+  implementation 'com.android.support:appcompat-v7:23.+'
+  implementation group: 'com.kakao.sdk', name: 'usermgmt', version: KAKAO_SDK_VERSION
 }
