--- a/ReactNativeKakaoExample/package.json
+++ b/ReactNativeKakaoExample/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ReactNativeKakaoExample",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "react-native start",
@@ -13,7 +13,7 @@
   "dependencies": {
     "react": "16.6.3",
     "react-native": "^0.57.8",
-    "react-native-kakao": "file:../"
+    "react-native-kakao": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
