--- a/Examples/ReactNativeKakaoExample/package.json
+++ b/Examples/ReactNativeKakaoExample/package.json
@@ -11,24 +11,23 @@
     "lint": "eslint *.js **/*.js"
   },
   "dependencies": {
-    "react": "16.6.3",
-    "react-native": "^0.57.8",
+    "react": "16.8.3",
+    "react-native": "0.59.9",
     "react-native-kakao": "file:../../rn-kakao"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-flow": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
+    "@babel/core": "^7.4.5",
+    "@babel/runtime": "^7.4.5",
+    "babel-jest": "^24.8.0",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.54.1",
+    "react-test-renderer": "16.8.3",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.4.2",
     "eslint": "^5.11.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.2",
-    "jest": "21.2.1",
-    "metro-react-native-babel-preset": "^0.51.1",
-    "react-test-renderer": "16.6.3"
+    "eslint-plugin-react": "^7.12.2"    
   },
   "jest": {
     "preset": "react-native"
