--- a/rn-kakao/package.json
+++ b/rn-kakao/package.json
@@ -1,12 +1,10 @@
 {
   "name": "react-native-kakao",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Kakao login module(package) for React Native",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "readypublish": "cp README** ../",
-    "publish": "npm publish"
+    "test": "echo \"Error: no test specified\" && exit 1"      
   },
   "keywords": [
     "react-native",
