--- a/Examples/ReactNativeKakaoExample/android/build.gradle
+++ b/Examples/ReactNativeKakaoExample/android/build.gradle
@@ -14,7 +14,7 @@ buildscript {
         jcenter()        
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:3.4.0"
+        classpath "com.android.tools.build:gradle:3.4.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,12 +24,12 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
-        jcenter()
-        google()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-            url "$rootDir/../node_modules/react-native/android"
+            url("$rootDir/../node_modules/react-native/android")
         }
+        google()
+        jcenter()
     }
 }
 
