--- a/Examples/ReactNativeKakaoExample/package.json
+++ b/Examples/ReactNativeKakaoExample/package.json
@@ -11,23 +11,21 @@
     "lint": "eslint *.js **/*.js"
   },
   "dependencies": {
-    "react": "16.8.3",
-    "react-native": "0.59.9",
+    "react": "16.8.6",
+    "react-native": "0.60.4",
     "react-native-kakao": "file:../../rn-kakao"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/runtime": "^7.4.5",
+    "@babel/core": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
-    "metro-react-native-babel-preset": "^0.54.1",
-    "react-test-renderer": "16.8.3",
+    "metro-react-native-babel-preset": "^0.55.0",
+    "react-test-renderer": "16.8.6",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.11.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.2"    
+    "eslint-config-airbnb": "^17.1.0"  
   },
   "jest": {
     "preset": "react-native"
