--- a/Examples/ReactNativeKakaoExample/android/build.gradle
+++ b/Examples/ReactNativeKakaoExample/android/build.gradle
@@ -28,6 +28,11 @@ allprojects {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url("$rootDir/../node_modules/react-native/android")
         }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
+        }        
+        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }      
         google()
         jcenter()
     }
@@ -36,6 +41,5 @@ allprojects {
 subprojects {
     repositories {
         mavenCentral()
-        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/' }
     }
 }
