--- a/rn-kakao/package.json
+++ b/rn-kakao/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-kakao",
-  "version": "1.1.2",
+  "name": "rn-kakao-login",
+  "version": "2.0.0",
   "description": "Kakao login module(package) for React Native",
   "main": "index.js",
   "scripts": {
