--- a/rn-kakao/package.json
+++ b/rn-kakao/package.json
@@ -4,7 +4,8 @@
   "description": "Kakao login module(package) for React Native",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"      
+    "test": "jest",
+    "lint": "eslint *.js **/*.js"
   },
   "keywords": [
     "react-native",
@@ -28,5 +29,13 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*"
+  },
+  "devDependencies": {
+    "@react-native-community/eslint-config": "^0.0.5",
+    "eslint": "5.11.1",
+    "jest": "^24.8.0"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
